# DecentImageViewer

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  Doxyfile.in
source/: CMakeLists.txt
source/Common/: CMakeLists.txt  divCommon.c  divCommon.h
source/Common/TinyImageFormat/: tinyimageformat_apis.h
source/Common/Utilities/: abstract_system.c  abstract_system.h  errors.h  linkage.h
source/Core/: CMakeLists.txt  loop.c  loop.h  main.c
source/Renderer/: CMakeLists.txt  abstraction.h
source/Renderer/GL/: gl_Device.c  gl_Device.h  gl_Image.c  gl_Image.h
source/Renderer/InternShaders/: CMakeLists.txt
source/Renderer/InternShaders/GLSL/: standard2dVertexShader.glsl
source/Renderer/InternShaders/ImplGenerator/: CMakeLists.txt  ShaderImplGen.c
source/Testing/: CMakeLists.txt
source/Testing/Rendering/: CMakeLists.txt  main.c
