file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

add_library(Common ${ExecutableFlags} ${SRC_FILES} ${HEADER_FILES})
set_property(TARGET Common PROPERTY C_STANDARD 99)
set_property(TARGET Common PROPERTY FOLDER "DecentImageViewer")